tests/errors/list_copy_violations.sad
# Reversing a list containing non-copyable types should complete without crashing Python
method foo() {}
items = [foo]
rev = items.reverse()
show("Reverse completed without crash")
